# olc

./: .gitignore  README.md
.github/workflows/: python-app.yml
olc/: pyproject.toml
olc/olc/: olc.py  runner.py
ollama-cli/: pyproject.toml
ollama-cli/ollama_cli/: __main__.py  ollama_cli.py
ollamac/: README.md  pyproject.toml
ollamac/ollamac/: __main__.py  ollamac.py
ollamac/tests/: ollamac_test.py
