[tool.poetry]
name = "olc"
version = "0.1.0"
description = ""
authors = ["Promotos <promotos@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
